package org.adsl.shared.enums;

/**
 * Inventor card icons. At end-game each player scores
 * {@code numInventors × distinctIcons} PP, so collecting different icons
 * is always better than duplicates.
 */
public enum Icon {
    BOAT,
    SPEARHEAD,
    HOOK,
    NECKLACE,
    BOWL,
    ROPE,
    TOTEM,
    FLUTE,
    LEATHER,
    BREAD
}
