package org.adsl.server.exceptions;

public class HostDisconnectedException extends ServerException {
    public HostDisconnectedException(String message) {
        super(message);
    }
}
