package org.adsl.shared.enums;

public enum CardType {
    INVENTOR,
    ARTIST,
    HUNTER,
    SHAMAN,
    GATHERER,
    BUILDER,
    BUILDINGS,
    SHAMANIC_RITUAL,
    SUSTENANCE,
    CAVE_PAINTINGS,
    HUNT
}
