package org.example.shared.enums;

public enum Totem {
    RED,
    WHITE,
    BLACK,
    BLUE,
    YELLOW
}
